[gd_scene load_steps=5 format=2]

[ext_resource path="res://PotatoScreen.png" type="Texture" id=1]
[ext_resource path="res://Quick.tres" type="Theme" id=2]
[ext_resource path="res://EndScene.gd" type="Script" id=3]
[ext_resource path="res://Sound/PotatoSOng.mp3" type="AudioStream" id=4]

[node name="EndScene" type="Node2D"]
script = ExtResource( 3 )

[node name="PotatoScreen" type="Sprite" parent="."]
position = Vector2( 128, 120 )
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="PotatoScreen"]
modulate = Color( 0.235294, 0.192157, 0.270588, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -256.0
margin_top = -159.0
margin_right = -1.0
margin_bottom = -122.0
theme = ExtResource( 2 )
text = "Thanks for Playing
You Scored"
align = 1

[node name="Score_Label" type="Label" parent="PotatoScreen"]
modulate = Color( 0.235294, 0.192157, 0.270588, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -257.0
margin_top = -127.0
margin_bottom = -74.0
theme = ExtResource( 2 )
text = "0000000"
align = 1
valign = 1

[node name="Label2" type="Label" parent="PotatoScreen"]
modulate = Color( 0.235294, 0.192157, 0.270588, 1 )
margin_left = -127.0
margin_top = 78.0
margin_right = 127.0
margin_bottom = 106.0
theme = ExtResource( 2 )
text = "Press Any Key"
align = 1
valign = 1

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
autostart = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
autoplay = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
